--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,23 @@
     </properties>
 
     <dependencies>
+
+        <!-- Зависимости для JavaFX -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>18.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>18.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>18.0.1</version>
+        </dependency>
         <!-- SLF4J API for logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -32,7 +49,11 @@
             <version>5.7.1</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
+
+
+
 
     <build>
         <plugins>
